# SO1_201901055

./: README.md
Proyecto1/: README.md  comandos  docker-compose.yml
Proyecto1/Backend/: Dockerfile  cpu_handler.go  go.mod  go.sum  main.go  ram_handler.go
Proyecto1/Backend/Database/: database.go  mysql.go
Proyecto1/Backend/Handlers/: Actualizar.go  Actulizar.go  arbol_procesos.go  cpu_actual.go  cpu_handler.go  (+6 more)
Proyecto1/Database/: Dockerfile  script.sql
Proyecto1/Modulos/: .Module.symvers.cmd  .cpu_so1_1s2024.ko.cmd  .cpu_so1_1s2024.mod.cmd  .cpu_so1_1s2024.mod.o.cmd  .cpu_so1_1s2024.o.cmd  .modules.order.cmd  .ram_so1_1s2024.ko.cmd  .ram_so1_1s2024.mod.cmd  .ram_so1_1s2024.mod.o.cmd  .ram_so1_1s2024.o.cmd  Makefile  a  cpu_so1_1s2024.c  cpu_so1_1s2024.ko  cpu_so1_1s2024.mod  cpu_so1_1s2024.mod.c  modules.order  ram_so1_1s2024.c  ram_so1_1s2024.ko  ram_so1_1s2024.mod  ram_so1_1s2024.mod.c
Proyecto1/frontend/: Dockerfile  nginx.conf  package-lock.json
Proyecto2/: Readme.md  ingress.yaml  proyecto
Proyecto2/Comandos/: Readme.md
Proyecto2/Consumers/: Dockerfile  consumer.yaml  go.mod  main.go
Proyecto2/Database/: mongo.yaml  redis.yaml
Proyecto2/GRCP/: grcp.yaml
Proyecto2/Grafana/: client.yaml  dockerfile  go.mod  grafana.yaml  main.go
Proyecto2/Kafka/: autoscaling.yaml  consumer-deploy.yml
Proyecto2/Kubernetes/: Proecto2  grcp.yaml  kafka.yaml
Proyecto2/Rust/: rust.yaml
Proyecto2/Rust/producer/: Cargo.toml  main.rs
Proyecto2/Rust/producer/protoServidor/: servidor.pb.go  servidor_grpc.pb.go
Proyecto2/Trafico/: data2.json  traffic.py
(+41 files in other folders)
